--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/json-schema": "^7.0.12",
     "gh-pages": "^5.0.0",
     "tailwindcss": "^3.2.7"
   }
